Started work on Lexicon

--- a/TODO.txt
+++ b/TODO.txt
@@ -14,4 +14,5 @@ Conjugation
 Adjective	Boolean		True = Before / False = After
 Pre/Postpositions	Boolean		True = Pre / False = Post
 Sentence Structure	3 char limit	Check if has V, S and O then save to string
+Lexicon
 History
